--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -93,7 +93,7 @@ phone = "15572747640"
 #
 ## Address
 ## For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "珞喻路1037号", city = "武汉市", region = "湖北省", postcode = "94305", country = "中国", country_code = "PRC"}
+address = {street = "珞喻路1037号", city = "武汉市", region = "湖北省",  country = "中国", country_code = "PRC"}
 #
 ## Geographic coordinates
 ## To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
